[project]
name = "fraud-prevention"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.3",
    "numpy",
    "matplotlib",
    "seaborn",
    "jupyter",
    "scikit-learn",
    "pyarrow>=24.0.0",
    "lightgbm",
]
